--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,5 +23,5 @@
   </p>
 
   <!-- Custom Link to Digital Den -->
-  <p><a href="https://digitalden.cloud" target="_blank" rel="noopener">https://digitalden.cloud</a></p>
+  <p><a href="https://willonsuccess.com" target="_blank" rel="noopener">willonsuccess.com</a></p>
 </footer>
