--- a/_includes/head.html
+++ b/_includes/head.html
@@ -101,6 +101,9 @@
     <link rel="stylesheet" href="{{ site.data.origin[type].magnific-popup.css | relative_url }}">
   {% endif %}
 
+  <link rel="stylesheet" href="{{ '/assets/css/quote-box.css' | relative_url }}">
+
+
   <!-- JavaScript -->
 
   {% unless site.theme_mode %}
