--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,3 +11,5 @@
 @import 'layout/archives';
 @import 'layout/categories';
 @import 'layout/category-tag';
+/* _sass/addon/main.scss */
+@import "telegram-banner";
