--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,4 +11,4 @@
 @import 'layout/archives';
 @import 'layout/categories';
 @import 'layout/category-tag';
-@import "telegram-banner";
+@import 'telegram-banner';
